--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-hello 
-颉旺飞真帅
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="a.html">颉旺飞真帅</a>
+</body>
+</html>
